--- a/IMS-FE/player.html
+++ b/IMS-FE/player.html
@@ -9,7 +9,7 @@
      <form action="http://127.0.0.1:8000/players" method="POST">
         <input type="text" placeholder=" player Name">
         <input type="text" placeholder="player team">
-        <input type="skill" placeholder="player skill">
+        <input type="skill" placeholder="player skills">
         <input type="number" placeholder="player run">
         <input type="number" placeholder="player catches">
         <button type="submit" value="Submit">Submit</button>
